<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="gameViewModel"
            type="com.example.quotewars.home.HomeFragmentViewModel" />
        <variable
            name="homeFragment"
            type="com.example.quotewars.home.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkest_grey">

        <TextView
            android:id="@+id/textDailyQuote"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/starwars_font"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/beWithYou"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGetQuote"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:text="@string/btnQuote"
            android:textColor="@color/darker_grey"
            android:textSize="15sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDailyQuote" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGoToFavs"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnFav"
            android:textSize="15sp"
            android:textColor="@color/darker_grey"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGetQuote"
            app:layout_constraintVertical_bias="0.16"
            android:backgroundTint="@color/yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/signo"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoToFavs"
            app:layout_constraintVertical_bias="1.0"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/buttonGithub"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoToFavs"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_github"
            app:tint="@color/yellow"
            android:padding="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>